Tue Oct  8 05:40:37 2013  Eric Hodel  <drbrain@segment7.net>

	* .travis.yml:  Rebuild Travis CI's "ruby-head" version on successful
	  build.  Patch by Konstantin Haase.  [Fixes GH-417]
	  https://github.com/ruby/ruby/pull/417

Tue Oct  8 04:28:25 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-mode.el: Use preceding-char/following-char
	  (returning 0 at BOF/EOF) instead of char-before/char-after
	  (returning nil at BOF/EOF) to avoid error from char-syntax when
	  at BOF/EOF.

Tue Oct  8 04:12:45 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Add a missing
	  else clause to unbreak with `cp932`, etc.

	* misc/ruby-mode.el (ruby-mode-set-encoding): Ditto.

Tue Oct  8 03:57:34 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Use
	  `default-buffer-file-coding-system` if the :prefer-utf-8
	  property is not available.

	* misc/ruby-mode.el (ruby-mode-set-encoding): Ditto.

	* misc/ruby-additional.el (ruby-encoding-map): Override the
	  default value.

Tue Oct  8 03:19:19 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-additional.el (ruby-mode-set-encoding): Add support
	  for `prefer-utf-8` which was introduced in Emacs trunk.

	* misc/ruby-additional.el (ruby-encoding-map): Add a mapping from
	  `japanese-cp932` to `cp932` to fix the problem where saving a
	  source file written in Shift_JIS twice would end up having
	  `coding: japanese-cp932` which Ruby could not recognize.

	* misc/ruby-additional.el (ruby-mode-set-encoding): Add support
	  for encodings mapped to nil in `ruby-encoding-map`.

	* misc/ruby-additional.el (ruby-encoding-map): Map `us-ascii` and
	  `utf-8` to nil by default, meaning they need not be explicitly
	  declared in magic comment.

	* misc/ruby-additional.el (ruby-encoding-map): Add type
	  declaration for better customize UI.

	* misc/ruby-mode.el: Ditto for the above.

Tue Oct  8 00:14:53 2013  Akinori MUSHA  <knu@iDaemons.org>
